add somechanges to get parcentege of teacher+student