@@ -1,6 +1,5 @@
 package com.menu.demo.Services;
 
-
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -23,6 +22,7 @@ import com.menu.demo.Models.TeacherProfile;
 import com.menu.demo.Repositories.ClassroomRepository;
 import com.menu.demo.Repositories.CourseModuleRepository;
 import com.menu.demo.Repositories.EnrollmentRepository;
+import com.menu.demo.Repositories.ModuleScheduleRepository;
 import com.menu.demo.Repositories.SessionRepository;
 import com.menu.demo.Repositories.Subjectrepository;
 import com.menu.demo.Repositories.TeacherRepository;
@@ -33,222 +33,227 @@ import Dto.ScheduleEntryDto;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
+@Service
+@RequiredArgsConstructor
+@Transactional
+public class CourseModuleService {
 
-	
-	
-	
-//	the request will be like this : {
-//	  "name": "Math 3ème - Group A",
-//	  "subjectId": 1,
-//	  "schedules": [
-//	    { "day": "FRIDAY",  "startTime": "08:00", "endTime": "09:30" },
-//	    { "day": "SUNDAY",  "startTime": "15:00", "endTime": "16:30" }
-//	  ],
-//	  "periodStart": "2024-09-01",
-//	  "periodEnd":   "2025-06-30"
-//	}
-	
-	
-	
-	
-	@Service
-	@RequiredArgsConstructor
-	@Transactional
-	public class CourseModuleService {
+    private final CourseModuleRepository moduleRepository;
+    private final SessionRepository sessionRepository;
+    private final TeacherRepository teacherRepository;
+    private final Subjectrepository subjectRepository;
+    private final ClassroomRepository classroomRepository;
+    private final EnrollmentRepository enrollmentRepository;
+    private final ModuleScheduleRepository moduleScheduleRepository;
 
-	    private final CourseModuleRepository moduleRepository;
-	    private final SessionRepository sessionRepository;
-	    private final TeacherRepository teacherRepository;
-	    private final Subjectrepository subjectRepository;
-	    private final ClassroomRepository classroomRepository;
-	    private final EnrollmentRepository enrollmentRepository;
+    // ============== CREATE MODULE ==============
 
-	    // ============== CREATE MODULE + AUTO-GENERATE SESSIONS ==============
+    public CourseModuleResponseDto createCourseModule(
+            CourseModuleRequestDto request,
+            SchoolAdminProfile admin) {
 
-	    public CourseModuleResponseDto createCourseModule(
-	            CourseModuleRequestDto request,
-	            SchoolAdminProfile admin) {
+        School school = admin.getSchool();
 
-	        School school = admin.getSchool();
+        TeacherProfile teacher = teacherRepository.findById(request.getTeacherId())
+            .orElseThrow(() -> new ResourceNotFoundException("Teacher not found"));
+        Subject subject = subjectRepository.findById(request.getSubjectId())
+            .orElseThrow(() -> new ResourceNotFoundException("Subject not found"));
+        ClassRoom classroom = classroomRepository.findById(request.getClassroomId())
+            .orElseThrow(() -> new ResourceNotFoundException("Classroom not found"));
 
-	        TeacherProfile teacher = teacherRepository.findById(request.getTeacherId())
-	            .orElseThrow(() -> new ResourceNotFoundException("Teacher not found"));
+        if (!teacher.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Teacher does not belong to your school");
+        if (!subject.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Subject does not belong to your school");
+        if (!classroom.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Classroom does not belong to your school");
+        if (!teacher.getSubjects().contains(subject))
+            throw new AccessDeniedException("Teacher does not teach this subject");
 
-	        Subject subject = subjectRepository.findById(request.getSubjectId())
-	            .orElseThrow(() -> new ResourceNotFoundException("Subject not found"));
+        if (request.getSchedules() == null || request.getSchedules().isEmpty())
+            throw new IllegalArgumentException("At least one schedule day is required");
 
-	        ClassRoom classroom = classroomRepository.findById(request.getClassroomId())
-	            .orElseThrow(() -> new ResourceNotFoundException("Classroom not found"));
+        for (ScheduleEntryDto entry : request.getSchedules()) {
+            if (moduleRepository.existsTeacherScheduleConflict(
+                    teacher, entry.getDay(), entry.getStartTime(), entry.getEndTime()))
+                throw new IllegalStateException(
+                    "Teacher already has a module on " + entry.getDay() + " at that time");
+            if (moduleRepository.existsClassroomScheduleConflict(
+                    classroom, entry.getDay(), entry.getStartTime(), entry.getEndTime()))
+                throw new IllegalStateException(
+                    "Classroom already booked on " + entry.getDay() + " at that time");
+        }
 
-	        // Ownership checks
-	        if (!teacher.getSchool().getId().equals(school.getId()))
-	            throw new AccessDeniedException("Teacher does not belong to your school");
-	        if (!subject.getSchool().getId().equals(school.getId()))
-	            throw new AccessDeniedException("Subject does not belong to your school");
-	        if (!classroom.getSchool().getId().equals(school.getId()))
-	            throw new AccessDeniedException("Classroom does not belong to your school");
-	        if (!teacher.getSubjects().contains(subject))
-	            throw new AccessDeniedException("Teacher does not teach this subject");
+        CourseModule module = CourseModule.builder()
+            .school(school).subject(subject).teacher(teacher).classroom(classroom)
+            .level(request.getLevel()).name(request.getName())
+            .periodStart(request.getPeriodStart()).periodEnd(request.getPeriodEnd())
+            .maxStudents(request.getMaxStudents()).archived(false).build();
 
-	        // Validate schedules
-	        if (request.getSchedules() == null || request.getSchedules().isEmpty())
-	            throw new IllegalArgumentException("At least one schedule day is required");
+        List<ModuleSchedule> schedules = request.getSchedules().stream()
+            .map(entry -> ModuleSchedule.builder()
+                .module(module).day(entry.getDay())
+                .startTime(entry.getStartTime()).endTime(entry.getEndTime()).build())
+            .collect(Collectors.toList());
 
-	        // Conflict check per day
-	        for (ScheduleEntryDto entry : request.getSchedules()) {
+        module.setSchedules(schedules);
+        moduleRepository.save(module);
+        generateSessions(module);
 
-	            if (moduleRepository.existsTeacherScheduleConflict(
-	                    teacher, entry.getDay(), entry.getStartTime(), entry.getEndTime()))
-	                throw new IllegalStateException(
-	                    "Teacher already has a module on " + entry.getDay() + " at that time");
+        return mapToResponse(module);
+    }
 
-	            if (moduleRepository.existsClassroomScheduleConflict(
-	                    classroom, entry.getDay(), entry.getStartTime(), entry.getEndTime()))
-	                throw new IllegalStateException(
-	                    "Classroom already booked on " + entry.getDay() + " at that time");
-	        }
+    // ============== UPDATE MODULE ==============
 
-	        // Build module
-	        CourseModule module = CourseModule.builder()
-	            .school(school)
-	            .subject(subject)
-	            .teacher(teacher)
-	            .classroom(classroom)
-	            .level(request.getLevel())
-	            .name(request.getName())
-	            .periodStart(request.getPeriodStart())
-	            .periodEnd(request.getPeriodEnd())
-	            .maxStudents(request.getMaxStudents())
-	            .archived(false)
-	            .build();
+    public CourseModuleResponseDto updateCourseModule(
+            Long moduleId,
+            CourseModuleRequestDto request,
+            SchoolAdminProfile admin) {
 
-	        // Build schedules and attach to module
-	       
-	        List<ModuleSchedule> schedules = request.getSchedules().stream()
-	            .map( entry -> ModuleSchedule.builder()
-	                .module(module)
-	                .day(entry.getDay())
-	                .startTime(entry.getStartTime())
-	                .endTime(entry.getEndTime())
-	                .build())
-	            .collect(Collectors.toList());
+        School school = admin.getSchool();
 
-	        module.setSchedules(schedules);
-	        moduleRepository.save(module);          // cascades to ModuleSchedule
+        CourseModule module = moduleRepository.findById(moduleId)
+            .orElseThrow(() -> new ResourceNotFoundException("Module not found: " + moduleId));
 
-	        // Auto-generate all sessions for the year
-	        generateSessions(module);
+        if (!module.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Module does not belong to your school");
 
-	        return mapToResponse(module);
-	    }
+        TeacherProfile teacher = teacherRepository.findById(request.getTeacherId())
+            .orElseThrow(() -> new ResourceNotFoundException("Teacher not found"));
+        Subject subject = subjectRepository.findById(request.getSubjectId())
+            .orElseThrow(() -> new ResourceNotFoundException("Subject not found"));
+        ClassRoom classroom = classroomRepository.findById(request.getClassroomId())
+            .orElseThrow(() -> new ResourceNotFoundException("Classroom not found"));
 
-	    // ============== GET ALL MODULES BY SCHOOL ==============
+        if (!teacher.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Teacher does not belong to your school");
+        if (!subject.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Subject does not belong to your school");
+        if (!classroom.getSchool().getId().equals(school.getId()))
+            throw new AccessDeniedException("Classroom does not belong to your school");
+        if (!teacher.getSubjects().contains(subject))
+            throw new AccessDeniedException("Teacher does not teach this subject");
 
-	    public List<CourseModuleResponseDto> getModulesBySchool(SchoolAdminProfile admin) {
-	        return moduleRepository.findAllBySchoolAndArchivedFalse(admin.getSchool())
-	            .stream()
-	            .map(this::mapToResponse)
-	            .toList();
-	    }
+        // Update basic fields
+        module.setName(request.getName());
+        module.setLevel(request.getLevel());
+        module.setMaxStudents(request.getMaxStudents());
+        module.setSubject(subject);
+        module.setTeacher(teacher);
+        module.setClassroom(classroom);
+        module.setPeriodStart(request.getPeriodStart());
+        module.setPeriodEnd(request.getPeriodEnd());
 
-	    // ============== GET MODULES BY LEVEL (student browsing) ==============
+        // Replace schedules if provided
+        if (request.getSchedules() != null && !request.getSchedules().isEmpty()) {
+            // delete old schedules
+            moduleScheduleRepository.deleteAll(module.getSchedules());
+            module.getSchedules().clear();
 
-	    public List<CourseModuleResponseDto> getModulesBySchoolAndLevel(Long schoolId, String level) {
-	        School school = School.builder().id(schoolId).build();   // proxy, no DB hit needed
-	        return moduleRepository.findAllBySchoolAndLevelAndArchivedFalse(school, level)
-	            .stream()
-	            .map(this::mapToResponse)
-	            .toList();
-	    }
+            // insert new schedules
+            List<ModuleSchedule> newSchedules = request.getSchedules().stream()
+                .map(entry -> ModuleSchedule.builder()
+                    .module(module).day(entry.getDay())
+                    .startTime(entry.getStartTime()).endTime(entry.getEndTime()).build())
+                .collect(Collectors.toList());
 
-	    // ============== ARCHIVE MODULE ==============
+            module.getSchedules().addAll(newSchedules);
 
-	    public void archiveModule(Long moduleId, SchoolAdminProfile admin) {
+            // archive all future sessions and regenerate
+            sessionRepository.archiveFutureSessionsByModule(module, LocalDate.now());
+            generateSessions(module);
+        }
 
-	        CourseModule module = moduleRepository.findById(moduleId)
-	            .orElseThrow(() -> new ResourceNotFoundException("Module not found: " + moduleId));
+        moduleRepository.save(module);
+        return mapToResponse(module);
+    }
 
-	        if (!module.getSchool().getId().equals(admin.getSchool().getId()))
-	            throw new AccessDeniedException("Module does not belong to your school");
+    // ============== GET ALL MODULES BY SCHOOL ==============
 
-	        // Archive all future sessions
-	        sessionRepository.archiveFutureSessionsByModule(module, LocalDate.now());
+    public List<CourseModuleResponseDto> getModulesBySchool(SchoolAdminProfile admin) {
+        return moduleRepository.findAllBySchoolAndArchivedFalse(admin.getSchool())
+            .stream().map(this::mapToResponse).toList();
+    }
 
-	        module.setArchived(true);
-	        moduleRepository.save(module);
-	    }
+    // ============== GET MODULES BY LEVEL ==============
 
-	    // ============== SESSION GENERATION ==============
+    public List<CourseModuleResponseDto> getModulesBySchoolAndLevel(Long schoolId, String level) {
+        School school = School.builder().id(schoolId).build();
+        return moduleRepository.findAllBySchoolAndLevelAndArchivedFalse(school, level)
+            .stream().map(this::mapToResponse).toList();
+    }
 
-	    private void generateSessions(CourseModule module) {
+    // ============== ARCHIVE MODULE ==============
 
-	        Map<DayOfWeek, ModuleSchedule> scheduleMap = module.getSchedules()
-	            .stream()
-	            .collect(Collectors.toMap(ModuleSchedule::getDay, s -> s));
+    public void archiveModule(Long moduleId, SchoolAdminProfile admin) {
+        CourseModule module = moduleRepository.findById(moduleId)
+            .orElseThrow(() -> new ResourceNotFoundException("Module not found: " + moduleId));
+        if (!module.getSchool().getId().equals(admin.getSchool().getId()))
+            throw new AccessDeniedException("Module does not belong to your school");
+        sessionRepository.archiveFutureSessionsByModule(module, LocalDate.now());
+        module.setArchived(true);
+        moduleRepository.save(module);
+    }
 
-	        List<Session> sessions = new ArrayList<>();
-	        LocalDate current = module.getPeriodStart();
+    // ============== BROWSE ==============
 
-	        while (!current.isAfter(module.getPeriodEnd())) {
+    public List<CourseModuleResponseDto> browseModules(Long schoolId, String level) {
+        return getModulesBySchoolAndLevel(schoolId, level);
+    }
 
-	            DayOfWeek day = current.getDayOfWeek();
+    // ============== SESSION GENERATION ==============
 
-	            if (scheduleMap.containsKey(day)) {
-	                ModuleSchedule schedule = scheduleMap.get(day);
-	                sessions.add(Session.builder()
-	                    .module(module)
-	                    .school(module.getSchool())
-	                    .date(current)
-	                    .startTime(schedule.getStartTime())
-	                    .endTime(schedule.getEndTime())
-	                    .archived(false)
-	                    .build());
-	            }
+    private void generateSessions(CourseModule module) {
+        Map<DayOfWeek, ModuleSchedule> scheduleMap = module.getSchedules().stream()
+            .collect(Collectors.toMap(ModuleSchedule::getDay, s -> s));
 
-	            current = current.plusDays(1);
-	        }
+        List<Session> sessions = new ArrayList<>();
+        LocalDate current = module.getPeriodStart();
 
-	        sessionRepository.saveAll(sessions);
-	    }
-	    
-	    public List<CourseModuleResponseDto> browseModules(Long schoolId, String level) {
-	     
-	        return getModulesBySchoolAndLevel(schoolId, level);
-	    }
-	    
+        while (!current.isAfter(module.getPeriodEnd())) {
+            DayOfWeek day = current.getDayOfWeek();
+            if (scheduleMap.containsKey(day)) {
+                ModuleSchedule schedule = scheduleMap.get(day);
+                sessions.add(Session.builder()
+                    .module(module).school(module.getSchool()).date(current)
+                    .startTime(schedule.getStartTime()).endTime(schedule.getEndTime())
+                    .archived(false).build());
+            }
+            current = current.plusDays(1);
+        }
+        sessionRepository.saveAll(sessions);
+    }
 
-	    // ============== MAPPING ==============
+    // ============== MAPPING ==============
 
-	    private CourseModuleResponseDto mapToResponse(CourseModule module) {
-	        long enrolled = enrollmentRepository.countActiveByModule(module);
+    private CourseModuleResponseDto mapToResponse(CourseModule module) {
+        long enrolled = enrollmentRepository.countActiveByModule(module);
 
-	        List<ScheduleEntryDto> schedules = module.getSchedules().stream()
-	            .map(s -> {
-	                ScheduleEntryDto dto = new ScheduleEntryDto();
-	                dto.setDay(s.getDay());
-	                dto.setStartTime(s.getStartTime());
-	                dto.setEndTime(s.getEndTime());
-	                return dto;
-	            }).toList();
+        List<ScheduleEntryDto> schedules = module.getSchedules().stream()
+            .map(s -> {
+                ScheduleEntryDto dto = new ScheduleEntryDto();
+                dto.setDay(s.getDay());
+                dto.setStartTime(s.getStartTime());
+                dto.setEndTime(s.getEndTime());
+                return dto;
+            }).toList();
 
-	        return CourseModuleResponseDto.builder()
-	            .id(module.getId())
-	            .name(module.getName())
-	            .level(module.getLevel())
-	            .subjectId(module.getSubject().getId())
-	            .subjectName(module.getSubject().getName())
-	            .teacherId(module.getTeacher().getId())
-	            .teacherName(module.getTeacher().getUser().getFullName())
-	            .classroomId(module.getClassroom().getId())
-	            .classroomName(module.getClassroom().getName())
-	            .periodStart(module.getPeriodStart())
-	            .periodEnd(module.getPeriodEnd())
-	            .maxStudents(module.getMaxStudents())
-	            .enrolledCount((int) enrolled)
-	            .schedules(schedules)
-	            .archived(module.isArchived())
-	            .build();
-	    }
-	}
-
-
+        return CourseModuleResponseDto.builder()
+            .id(module.getId())
+            .name(module.getName())
+            .level(module.getLevel())
+            .subjectId(module.getSubject().getId())
+            .subjectName(module.getSubject().getName())
+            .teacherId(module.getTeacher().getId())
+            .teacherName(module.getTeacher().getUser().getFullName())
+            .classroomId(module.getClassroom().getId())
+            .classroomName(module.getClassroom().getName())
+            .periodStart(module.getPeriodStart())
+            .periodEnd(module.getPeriodEnd())
+            .maxStudents(module.getMaxStudents())
+            .enrolledCount((int) enrolled)
+            .schedules(schedules)
+            .archived(module.isArchived())
+            .build();
+    }
+}
